tests/baselines/reference/project/jsFileCompilationDifferentNamesSpecifiedWithAllowJs/node/jsFileCompilationDifferentNamesSpecifiedWithAllowJs.errors.txt
DifferentNamesSpecifiedWithAllowJs/tsconfig.json(3,5): error TS5102: Option 'out' has been removed. Please remove it from your configuration.
  Use 'outFile' instead.
DifferentNamesSpecifiedWithAllowJs/tsconfig.json(3,5): error TS6082: Only 'amd' and 'system' modules are supported alongside --out.


==== DifferentNamesSpecifiedWithAllowJs/tsconfig.json (2 errors) ====
    {
      "compilerOptions": {
        "out": "test.js",
        ~~~~~
!!! error TS5102: Option 'out' has been removed. Please remove it from your configuration.
!!! error TS5102:   Use 'outFile' instead.
        ~~~~~
!!! error TS6082: Only 'amd' and 'system' modules are supported alongside --out.
        "allowJs": true
      },
      "files": [ "a.ts", "b.js" ]
    }
==== DifferentNamesSpecifiedWithAllowJs/a.ts (0 errors) ====
    var test = 10;
==== DifferentNamesSpecifiedWithAllowJs/b.js (0 errors) ====
    var test2 = 10; // Should get compiled